--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -1,11 +1,33 @@
+{%load static%}
+<link rel="stylesheet" type="text/css" href="{%static 'books/css/bootstrap.css'%}">
+<link rel="stylesheet" type="text/css" href="{%static 'books/css/bootstrap.min.css'%}">
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{%block title%}{%endblock title%}</title>
 </head>
-<body>
-    {%block content%}
-    {%endblock content%}
-</body>
+    <body>
+        <div class="row">
+            <div class="col-3">
+                <li><a href="{%url 'accounts:profile' profile.roll_no%}">Profile</a></li>
+                </li><a href="{%url 'books:home'%}">Home</a></li>
+            </div>
+            <div class="col">
+                {%block content%}
+                {%endblock content%}
+            </div>
+            <div class="col-3">
+                Profile
+                <li>Name: {{profile.name}}</li>
+                <li>Roll No: {{profile.roll_no}}</li>
+                <li>Gender: {{profile.gender}}</li>
+                <li>Branch: {{profile.branch}}</li>
+                <li>Year: {{profile.year}}</li>
+                <li>Programme: {{profile.programme}}</li>
+                <li>Email Id: {{profile.email_id}}</li>
+                <a href="{% url 'accounts:logout' %}">Logout</a>
+            </div>
+        </div>
+    </body>
 </html>
