--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -5,13 +5,22 @@
 {%endblock title%}
 {%block content%}
 Profile
-    <li>Name: {{profile.name}}</li>
-    <li>Roll No: {{profile.roll_no}}</li>
-    <li>Gender: {{profile.gender}}</li>
-    <li>Branch: {{profile.branch}}</li>
-    <li>Year: {{profile.year}}</li>
-    <li>Programme: {{profile.programme}}</li>
-    <li>Email Id: {{profile.email_id}}</li>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <img src="{{profile.profile_photo.url}}" alt="connect" style="max-height:200px">
+            </div>
+            <div class="col">
+                <li>Name: {{profile.name}}</li>
+                <li>Roll No: {{profile.roll_no}}</li>
+                <li>Gender: {{profile.gender}}</li>
+                <li>Branch: {{profile.branch}}</li>
+                <li>Year: {{profile.year}}</li>
+                <li>Programme: {{profile.programme}}</li>
+                <li>Email Id: {{profile.email_id}}</li>
+            </div>
+        </div>
+    </div>
     <form action="{%url 'accounts:edit_profile' profile.roll_no%}">
         <input type="submit" value="Edit Profile" class="btn btn-primary">
     </form>
