Refractored profiles from accounts app to profiles app

--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -1,11 +1,11 @@
-{%extends 'accounts/base.html'%}
+{%extends 'profiles/base.html'%}
 
 {%block title%}
     Profile
 {%endblock title%}
 {%block content%}
 Profile
-    <form method="post" action="{%url 'accounts:edit_profile' user_roll_no %}" enctype="multipart/form-data">
+    <form method="post" action="{%url 'profiles:edit_profile' user_roll_no %}" enctype="multipart/form-data">
         {%csrf_token%}
         {{form}}
         <input value="Save" type="submit">
