--- a/accounts/templates/registration/admin_login.html
+++ b/accounts/templates/registration/admin_login.html
@@ -10,7 +10,7 @@
         {%csrf_token%}
         {{form}}
         <input value="Login" type="submit">
-        <input type="hidden" name="next" value="{% url 'book_issue:admin_site'%}">
+        <input type="hidden" name="next" value="{% url 'librarian:home'%}">
     </form>
 </body>
 </html>
