Styled Forms Buttons

--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -8,6 +8,6 @@
     {%csrf_token%}
     {{user_form}}
     {{profile_form}}
-    <input value="SignUp" type="submit">
+    <input value="SignUp" type="submit" class="btn btn-primary">
 </form>
 {%endblock%}
