Improved Form's UI with Django Crispy Forms

--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -10,7 +10,7 @@
     <body>
         <div class="row">
             <div class="col-3">
-
+                <div><a href="{% url 'accounts:login' %}">Already User? Login</a> </div>
             </div>
             <div class="col">
                 {%block content%}
