--- a/librarian/templates/librarian/home.html
+++ b/librarian/templates/librarian/home.html
@@ -1,11 +1,11 @@
 {%extends 'librarian/base.html'%}
-
+{%load crispy_forms_tags %}
 {%block title%}
     Librarian Home Page
 {%endblock title%}
 {%block content%}
     <form method="get" action="{%url 'librarian:search' %}">
-        {{search_form}}
+        {{search_form|crispy}}
         <input name="search" value="Search" class="btn btn-primary" type="submit">
     </form>
     <table>
@@ -20,7 +20,7 @@
                 <form method="post" action="{%url 'librarian:home'%}" class="form-inline">
                     {%csrf_token%}
                     <td>
-                        {{book_issue_code_form}}
+                        {{book_issue_code_form|crispy}}
                     </td>
                     <td>
                         <input type="submit" name="check_code" value="{{book_issue_request.pk}}"
