--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -1,4 +1,6 @@
 {%load static%}
+
+{% load crispy_forms_tags %}
 <link rel="stylesheet" type="text/css" href="{%static 'books/css/bootstrap.css'%}">
 <link rel="stylesheet" type="text/css" href="{%static 'books/css/bootstrap.min.css'%}">
 <!DOCTYPE html>
@@ -8,11 +10,20 @@
     <title>Login</title>
 </head>
 <body>
-    <div><a href="{% url 'accounts:admin_site_login' %}">Admin Site</a> </div>
-    <form action="{%url 'accounts:login'%}" method="post">
-        {%csrf_token%}
-        {{form}}
-        <input value="Login" type="submit" class="btn btn-primary">
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col">
+                <div><a href="{% url 'accounts:admin_site_login' %}">Admin Site</a> </div>
+                <form action="{%url 'accounts:login'%}" method="post">
+                    {%csrf_token%}
+                    {{form|crispy}}
+                    <input value="Login" type="submit" class="btn btn-primary">
+                </form>
+                <div><a href="{%url 'accounts:signup' %}"</a> Not a User? SignUp</div>
+            </div>
+            <div class="col-4"></div>
+        </div>
+    </div>
 </body>
 </html>
