Added Book return functionality

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -49,11 +49,17 @@ Profile
                         <tr>
                             <th>Book Name</th>
                             <th>Issued Time</th>
+                            <th>Return Book</th>
                         </tr>
                         {%for issued_book in issued_books%}
                             <tr>
                                 <td>{{issued_book.book.title}}</td>
                                 <td>{{issued_book.created}}</td>
+                                <td>
+                                    <form action="{%url 'book_issue:book_return' issued_book.pk%}">
+                                        <input type="submit" value="Return" class="btn btn-primary">
+                                    </form>
+                                </td>
                             </tr>
                         {%endfor%}
                     </table>
