--- a/librarian/templates/librarian/issued_books.html
+++ b/librarian/templates/librarian/issued_books.html
@@ -1,22 +1,9 @@
 {%extends 'librarian/base.html'%}
 {%load crispy_forms_tags %}
+{% load render_table from django_tables2 %}
 {%block title%}
     Issued Books
 {%endblock title%}
 {%block content%}
-
-    <table>
-        <tr>
-            <th>Student Name</th>
-            <th>Book Name</th>
-            <th>Code</th>
-        </tr>
-        {%for issued_book in issued_books%}
-            <tr>
-                <td>{{issued_book.user.username}}</td>
-                <td>{{issued_book.book.title}}</td>
-                <td>{{issued_book.return_code}}</td>
-            </tr>
-        {%endfor%}
-    </table>
+    {% render_table table %}
 {%endblock%}
