--- a/book_issue/templates/book_issue/base.html
+++ b/book_issue/templates/book_issue/base.html
@@ -19,13 +19,15 @@
             </div>
             <div class="col-3">
                 Profile
-                <li>Name: {{user.profile.name}}</li>
-                <li>Roll No: {{user.profile.roll_no}}</li>
-                <li>Gender: {{user.profile.gender}}</li>
-                <li>Branch: {{user.profile.branch}}</li>
-                <li>Year: {{user.profile.year}}</li>
-                <li>Programme: {{user.profile.programme}}</li>
-                <li>Email Id: {{user.profile.email_id}}</li>
+                <ul class="list-group">
+                    <li class="list-group-item">Name: {{user.profile.name}}</li>
+                    <li class="list-group-item">Roll No: {{user.profile.roll_no}}</li>
+                    <li class="list-group-item">Gender: {{user.profile.gender}}</li>
+                    <li class="list-group-item">Branch: {{user.profile.branch}}</li>
+                    <li class="list-group-item">Year: {{user.profile.year}}</li>
+                    <li class="list-group-item">Programme: {{user.profile.programme}}</li>
+                    <li class="list-group-item">Email Id: {{user.profile.email_id}}</li>
+                </ul>
                 <a href="{% url 'accounts:logout' %}">Logout</a>
             </div>
         </div>
