--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -19,13 +19,15 @@
             </div>
             <div class="col-3">
                 Profile
-                <li>Name: {{profile.name}}</li>
-                <li>Roll No: {{profile.roll_no}}</li>
-                <li>Gender: {{profile.gender}}</li>
-                <li>Branch: {{profile.branch}}</li>
-                <li>Year: {{profile.year}}</li>
-                <li>Programme: {{profile.programme}}</li>
-                <li>Email Id: {{profile.email_id}}</li>
+                <ul class="list-group">
+                    <li class="list-group-item">Name: {{profile.name}}</li>
+                    <li class="list-group-item">Roll No: {{profile.roll_no}}</li>
+                    <li class="list-group-item">Gender: {{profile.gender}}</li>
+                    <li class="list-group-item">Branch: {{profile.branch}}</li>
+                    <li class="list-group-item">Year: {{profile.year}}</li>
+                    <li class="list-group-item">Programme: {{profile.programme}}</li>
+                    <li class="list-group-item">Email Id: {{profile.email_id}}</li>
+                </ul>
                 <a href="{% url 'accounts:logout' %}">Logout</a>
             </div>
         </div>
