--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,6 +5,11 @@
     Profile
 {%endblock title%}
 {%block content%}
+{%if messages%}
+    {%for message in messages%}
+        <div class="alert alert-success" role="alert">{{message}}</div>
+    {%endfor%}
+{%endif%}
 Profile
     <div class="container">
         <div class="row">
