--- a/books/templates/books/result.html
+++ b/books/templates/books/result.html
@@ -1,22 +1,11 @@
 {%extends 'books/base.html'%}
-
+{% load render_table from django_tables2 %}
 {%block title%}
     Result Page
 {%endblock title%}
 {%block content%}
     <div class="container">
-        {%for book in result%}
-            <div class="row">
-                <div class="col-1">{{forloop.counter}}.</div>
-                <div class="col"><a href="{%url 'books:detail_view' book.pk%}">{{book.title}}</a></div>
-            </div>
-            <div class="row">
-                <div class="col"></div>
-                <div class="col-2">{{book.author_name}}</div>
-                <div class="col-1">{{book.pages}} Pages</div>
-                <div class="col"></div>
-            </div>
-        {%endfor%}
+        {% render_table table %}
         <div align="center">End of Results</div>
     </div>
 {%endblock%}
