--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -25,6 +25,7 @@ Profile
                     <li class="list-group-item">Year: {{profile.year}}</li>
                     <li class="list-group-item">Programme: {{profile.programme}}</li>
                     <li class="list-group-item">Email Id: {{profile.email_id}}</li>
+                    <li class="list-group-item">Total Fine: {{total_fine}}</li>
                 </ul>
             </div>
         </div>
